modified model & routes & update swagger
